5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1760_1576.log
== TEST (2019-05-29 11:35:22) 
-- CODE:
from numpy import*
x = int(input("x: "))
v1 = array(eval(input([0,x])))
v2 = array(eval(input([0,x])))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:09:46) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:09:53) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:12:30) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
print(sum(v))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:12:42) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
print(sum(v1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:13:18) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
print(size(v1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:18:48) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a =0
print(size(v1))

while (x != i):
		if	(v1[] == v2[]):
			a = a + 1
		elif(v1[] > v2[]):
			b = b + 1
		else:
			 c = c + 1
i = i + 1

print( 1)


-- ERROR:
File "XXXX", line 10
    if	(v1[] == v2[]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:19:34) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a =0
print(size(v1))

while (x != i):
		  if	(v1[] == v2[]):
			a = a + 1
		   elif(v1[] > v2[]):
			b = b + 1
			else:
			 c = c + 1
      i = i + 1

print( 1)


-- ERROR:
File "XXXX", line 10
    if	(v1[] == v2[]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:19:56) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a =0
print(size(v1))

while (x != i):
		  if	(v1[] == v2[]):
			    a = a + 1
		   elif(v1[] > v2[]):
		       b = b + 1
			else:
			 	c = c + 1
      i = i + 1

print( 1)


-- ERROR:
File "XXXX", line 10
    if	(v1[] == v2[]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:20:58) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a =0
print(size(v1))

while (x != i):
		if	(v1[] == v2[]):
			a = a + 1
		elif	(v1[] > v2[]):
				b = b + 1
		else:
			c = c + 1
i = i + 1

print( i)


-- ERROR:
File "XXXX", line 10
    if	(v1[] == v2[]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:21:18) 
-- CODE:
from numpy import*
x = int(input("x"))
v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a =0
print(size(v1))

while (x != i):
		if	(v1[1] == v2[1]):
			a = a + 1
		elif	(v1[1] > v2[1]):
				b = b + 1
		else:
			c = c + 1
i = i + 1

print( i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:31:28) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[] == v2[]):
			a = a + 1
		elif	(v1[]== 11 and v2[]== 22 ):
				b = b + 1
		elif	(v1[] == 11 and v2[]== 33)
				c = c + 1
		else:
			d = d + 1
	i = i + 1
print(i)



-- ERROR:
File "XXXX", line 13
    if	(v1[] == v2[]):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:17) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[1] == v2[1]):
			a = a + 1
		elif	(v1[1]== 11 and v2[1]== 22 ):
				b = b + 1
		elif	(v1[1] == 11 and v2[1]== 33)
				c = c + 1
		else:
			d = d + 1
	i = i + 1
print(i)



-- ERROR:
File "XXXX", line 17
    elif	(v1[1] == 11 and v2[1]== 33)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:31) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[1] == v2[1]):
			a = a + 1
		elif	(v1[1]== 11 and v2[1]== 22 ):
				b = b + 1
		elif	(v1[1] == 11 and v2[1]== 33)
				c = c + 1
		else:
			d = d + 1
	i = i + 1
print(i)



-- ERROR:
File "XXXX", line 17
    elif	(v1[1] == 11 and v2[1]== 33)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:36) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[1] == v2[1]):
			a = a + 1
		elif	(v1[1]== 11 and v2[1]== 22 ):
				b = b + 1
		elif	(v1[1] == 11 and v2[1]== 33):
				c = c + 1
		else:
			d = d + 1
	i = i + 1
print(i)



-- ERROR:
File "XXXX", line 21
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:47) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[1] == v2[1]):
			a = a + 1
		elif	(v1[1]== 11 and v2[1]== 22 ):
				b = b + 1
		elif	(v1[1] == 11 and v2[1]== 33):
				c = c + 1
		else:
			d = d + 1
		i = i + 1
print(i)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:34:36) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1 == v2):
			a = a + 1
		elif	(v1== 11 and v2== 22 ):
				b = b + 1
		elif	(v1 == 11 and v2== 33):
				c = c + 1
		else:
			d = d + 1
		i = i + 1
print(i)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:34:58) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1 == v2):
			a = a + 1
		elif	(v1== 11 and v2== 22 ):
				b = b + 1
		elif	(v1 == 11 and v2== 33):
				c = c + 1
		else:
			d = d + 1
		i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:35:03) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1 == v2):
			a = a + 1
		elif	(v1== 11 and v2== 22 ):
				b = b + 1
		elif	(v1 == 11 and v2== 33):
				c = c + 1
		else:
			d = d + 1
		i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:36:37) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[i] == v2[i]):
			a = a + 1
		elif	(v1[i] == 11 and v2[i] == 22 ):
				b = b + 1
		elif	(v1[i] == 11 and[i] v2== 33):
				c = c + 1
		else:
			d = d + 1
		i = i + 1
print(a)



-- ERROR:
File "XXXX", line 17
    elif	(v1[i] == 11 and[i] v2== 33):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:36:55) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[i] == v2[i]):
			a = a + 1
		elif	(v1[i] == 11 and v2[i] == 22 ):
				b = b + 1
		elif	(v1[i] == 11 and v2[i] == 33):
				c = c + 1
		else:
			d = d + 1
		i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:48:48) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[i] == v2[i]):
			a = a + 1
		elif	(v1[i] == 11 and v2[i] == 22 ):
				b = b + 1
		elif	(v1[i] == 11 and v2[i] == 33):
				c = c + 1
		elif	(v1[i] ==  22 and v2[i] == 11):
				c = c + 1
		elif	(v1[i] ==  22 and  v2[i] == 33):
				b = b + 1
		elif	(v1[i] == 33 and  v2[i] == 11):
				b = b + 1
		elif	(v1[i] == 33 and v2[i]  == 22):
				c = c + 1
		
			
		i = i + 1
		
if	(b == c):
	 print("EMPATE")
		
elif	(c > b):
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:49:04) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[i] == v2[i]):
			a = a + 1
		elif	(v1[i] == 11 and v2[i] == 22 ):
				b = b + 1
		elif	(v1[i] == 11 and v2[i] == 33):
				c = c + 1
		elif	(v1[i] ==  22 and v2[i] == 11):
				c = c + 1
		elif	(v1[i] ==  22 and  v2[i] == 33):
				b = b + 1
		elif	(v1[i] == 33 and  v2[i] == 11):
				b = b + 1
		elif	(v1[i] == 33 and v2[i]  == 22):
				c = c + 1
		
			
		i = i + 1
		
if	(b == c):
	 print("EMPATE")
		
elif	(c > b):
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:49:32) 
-- CODE:
from numpy import*

v1 = array(eval(input("v1: ")))
v2 = array(eval(input("v2: ")))
i = 0
a = 0
b = 0
c = 0
d = 0
print(size(v1))

while	(size(v1) != i):
		if	(v1[i] == v2[i]):
			a = a + 1
		elif	(v1[i] == 11 and v2[i] == 22 ):
				b = b + 1
		elif	(v1[i] == 11 and v2[i] == 33):
				c = c + 1
		elif	(v1[i] ==  22 and v2[i] == 11):
				c = c + 1
		elif	(v1[i] ==  22 and  v2[i] == 33):
				b = b + 1
		elif	(v1[i] == 33 and  v2[i] == 11):
				b = b + 1
		elif	(v1[i] == 33 and v2[i]  == 22):
				c = c + 1
		
			
		i = i + 1
		
if	(b == c):
	 print("EMPATE")
		
elif	(c > b):
		print("EUSAPIA")
		
else:
	print("BARSANULFO")
-- EXECUTION TIME:
0.472496
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
